--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,4 @@
-version: "3.8"
-
 services:
-  # MS SQL Server - Relational Database
   mssql:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: shopstream_mssql
@@ -18,7 +15,6 @@ services:
     networks:
       - shopstream-network
 
-  # MongoDB - NoSQL Database
   mongodb:
     image: mongo:6-jammy
     container_name: shopstream_mongodb
@@ -39,7 +35,6 @@ services:
       timeout: 5s
       retries: 5
 
-  # Zookeeper
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
     container_name: shopstream_zookeeper
@@ -50,7 +45,6 @@ services:
     networks:
       - shopstream-network
 
-  # Kafka
   kafka:
     image: confluentinc/cp-kafka:7.5.0
     container_name: shopstream_kafka
@@ -71,7 +65,6 @@ services:
     networks:
       - shopstream-network
 
-  # Grafana
   grafana:
     image: grafana/grafana:10.2.0
     container_name: shopstream_grafana
@@ -82,6 +75,55 @@ services:
       GF_SECURITY_ADMIN_PASSWORD: admin123
     volumes:
       - grafana_data:/var/lib/grafana
+    networks:
+      - shopstream-network
+
+  # ✅ Order Service (FastAPI)
+  order-service:
+    build:
+      context: ./services/order-service
+    container_name: shopstream_order_service
+    depends_on:
+      mongodb:
+        condition: service_healthy
+      mssql:
+        condition: service_started
+      kafka:
+        condition: service_started
+    env_file:
+      - ./services/order-service/.env
+    ports:
+      - "8001:8001"
+    networks:
+      - shopstream-network
+
+  # ✅ Product Service
+  product-service:
+    build:
+      context: ./services/product-service
+    container_name: shopstream_product_service
+    depends_on:
+      mongodb:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+    ports:
+      - "8002:8002"
+    networks:
+      - shopstream-network
+
+  # ✅ User Service
+  user-service:
+    build:
+      context: ./services/user-service
+    container_name: shopstream_user_service
+    depends_on:
+      mssql:
+        condition: service_started
+      kafka:
+        condition: service_started
+    ports:
+      - "8003:8003"
     networks:
       - shopstream-network
 
