--- a/services/product-service/Dockerfile
+++ b/services/product-service/Dockerfile
@@ -1,15 +1,24 @@
 FROM python:3.11-slim
 
-WORKDIR /app
-
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends unixodbc unixodbc-dev \
+# Install system dependencies + Microsoft ODBC Driver 17
+RUN apt-get update && apt-get install -y \
+    curl \
+    gnupg2 \
+    apt-transport-https \
+    unixodbc \
+    unixodbc-dev \
+    && curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+    && curl https://packages.microsoft.com/config/debian/12/prod.list > /etc/apt/sources.list.d/mssql-release.list \
+    && apt-get update \
+    && ACCEPT_EULA=Y apt-get install -y msodbcsql17 \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r /app/requirements.txt
+WORKDIR /app
 
-COPY app /app/app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-EXPOSE 8002
+COPY app/ ./app/
+
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8002"]
