--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -14,4 +14,5 @@ COPY app /app/app
 
 EXPOSE 8003
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8003"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"]
+
