--- a/services/product-service/requirements.txt
+++ b/services/product-service/requirements.txt
@@ -1,9 +1,6 @@
-fastapi
-uvicorn[standard]
-pymongo
-pydantic
-python-dotenv
-kafka-python
-pyodbc
-pydantic-settings
-
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pymongo==4.6.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+kafka-python==2.0.2
